--- a/src/webapp/.env.example
+++ b/src/webapp/.env.example
@@ -20,7 +20,6 @@ DEV_INIT_DB_PASSWORD="<PUT PASSWORD HERE>"
 DEV_INIT_DB_USER="tester@datakind.org"
 
 # GCP related keys. Retrieved for the service account with write access to GCS here: https://stackoverflow.com/questions/46287267/how-can-i-get-the-file-service-account-json-for-google-translate-api
-GCP_SERVICE_ACCOUNT_KEY_PATH=""
 GCP_REGION="us-east4"
 # The service account email used by Databricks
 GCP_SERVICE_ACCOUNT_EMAIL=""
@@ -35,7 +34,8 @@ FE_HASHED_PASSWORD=""
 CATALOG_NAME=""
 DATABRICKS_WORKSPACE=""
 DATABRICKS_HOST_URL=""
-
+# The service account used to read GCP buckets from Databricks.
+DATABRICKS_SERVICE_ACCOUNT_EMAIL=""
 
 # Datakinders allowed to issue API key. This should be the MINIMUM set. Keep this group small. Pass as a comma separated string structured like so: "abc@dk.org,bcd@dk.org"
 API_KEY_ISSUERS=""
