--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,17 +5,14 @@ description = "School-agnostic lib for implementing Student Success Tool workflo
 readme = "README.md"
 requires-python = ">=3.10,<3.13"
 dependencies = [
-    "databricks-connect~=16.0",
+    "databricks-connect",
     "databricks-sdk~=0.38.0",
     "faker>=20.1",
     "ipywidgets~=8.1",
     "matplotlib~=3.7",
     "missingno~=0.5",
     "mlflow~=2.13",
-    "numpy~=1.26",
-    "pandas~=2.1",
     "pandera~=0.21",
-    "pyarrow~=16.0",
     "pydantic~=2.10",
     "pyyaml~=6.0",
     "scikit-learn~=1.4",
@@ -36,6 +33,11 @@ dev = [
     "pytest~=8.3",
     "ruff~=0.8",
 ]
+group1 = ["pandas~=2.1", "pyarrow~=16.0"]
+data-validation = [
+    "tensorflow_data_validation==1.16.1",
+    "pyarrow==10.0.1"
+]
 
 [build-system]
 requires = ["hatchling"]
@@ -43,6 +45,12 @@ build-backend = "hatchling.build"
 
 [tool.uv]
 default-groups = ["dev"]
+conflicts = [
+    [
+      { group = "group1" },
+      { group = "data-validation" }
+    ],
+]
 
 [tool.ruff]
 line-length = 88
