--- a/.github/actions/setup-python-env/action.yml
+++ b/.github/actions/setup-python-env/action.yml
@@ -15,7 +15,7 @@ runs:
     - name: Install uv
       uses: astral-sh/setup-uv@v5
       with:
-        version: ">=0.6.0"
+        version: "latest"
         enable-cache: true
         cache-dependency-glob: "uv.lock"
     - name: Install project and dependencies
