--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -23,8 +23,8 @@ jobs:
       - name: Run linter
         if: steps.changed-files.outputs.any_changed == 'true'
         run: |
-          uv tool run ruff check ${{ steps.changed-files.outputs.all_changed_files }}
+          uv tool run ruff check --diff ${{ steps.changed-files.outputs.all_changed_files }}
       - name: Run formatter
         if: steps.changed-files.outputs.any_changed == 'true'
         run: |
-          uv tool run ruff format --check ${{ steps.changed-files.outputs.all_changed_files }}
+          uv tool run ruff format --diff ${{ steps.changed-files.outputs.all_changed_files }}
