--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "statsmodels~=0.14",
     "shap~=0.46.0",
     "tomli~=2.0; python_version<'3.11'",
+    "google-cloud>=0.34.0",
 ]
 
 [project.urls]
