--- a/pipelines/inference/pdp_inference/workflow_asset_bundle/databricks.yml
+++ b/pipelines/inference/pdp_inference/workflow_asset_bundle/databricks.yml
@@ -3,22 +3,30 @@
 bundle:
   name: SST Inference demo pipeline
   uuid: 99992898-07ae-4641-b086-dd3ba80ffc2f
-
+    
 include:
-  - resources/*.yml
+  - ../resources/github_sourced_pdp_inference_pipeline.yml
 
 variables:
+  DB_workspace:
+    description: "Databricks workspace"
   pipeline_sa_email:
     description: "Ingestion pipeline SA"
   datakind_notification_email:
     description: "Datakind address used for email notifications"
   end_user_notification_email:
     description: "End user address used for email notifications"
-  group_to_manage_workflow:
+  fellows_group_to_manage_workflow:
+    description: "Temprorary fellow Group with permissions to manage the job"
+  datakind_group_to_manage_workflow:
     description: "Group with permissions to manage the job"
-  service_account_user:
-    description: "Service account user"
+  service_account_executer:
+    description: "Service account to execute the pipeline"
+  service_principal_run_as:
+    description: "Account to run the pipeline"
 
+run_as: 
+  service_principal_name: ${var.service_principal_run_as}
     
 targets:
   dev:
@@ -28,12 +36,9 @@ targets:
     # See also https://docs.databricks.com/dev-tools/bundles/deployment-modes.html.
     mode: development
     default: true
-
-
   prod:
     mode: production
     workspace:
-      # We explicitly specify /Workspace/Users/pedro.melendez@datakind.org to make sure we only have a single copy.
       root_path: /Workspace/Users/pedro.melendez@datakind.org/.bundle/${bundle.name}/${bundle.target}
 
 
