--- a/pipelines/inference/pdp_inference/workflow_asset_bundle/resources/github_sourced_pdp_inference_pipeline.yml
+++ b/pipelines/inference/pdp_inference/workflow_asset_bundle/resources/github_sourced_pdp_inference_pipeline.yml
@@ -5,72 +5,128 @@ resources:
       max_concurrent_runs: 2
       tasks:
         - task_key: data_ingestion
-          notebook_task:
-            notebook_path: pipelines/tasks/pdp_data_ingestion/pdp_data_ingestion
+          spark_python_task:
+            python_file: pipelines/tasks/pdp_data_ingestion/pdp_data_ingestion.py
             source: GIT
+            parameters:
+              - --cohort_file_name
+              - "{{job.parameters.cohort_file_name}}"
+              - --course_file_name
+              - "{{job.parameters.course_file_name}}"
+              - --databricks_institution_name
+              - "{{job.parameters.databricks_institution_name}}"
+              - --db_run_id
+              - "{{job.parameters.db_run_id}}"
+              - --DB_workspace
+              - "{{job.parameters.DB_workspace}}"
+              - --gcp_bucket_name
+              - "{{job.parameters.gcp_bucket_name}}"
+              - --job_root_dir  
+              - "/Volumes/{{job.parameters.DB_workspace}}/{{job.parameters.databricks_institution_name}}_gold/gold_volume/inference_jobs/{{job.parameters.db_run_id}}"
           job_cluster_key: pdp-inference-pipeline-cluster
           libraries:
-            - pypi:
-                package: faker
-            - pypi:
-                package: pandera
             - pypi:
                 package: git+https://github.com/datakind/student-success-tool.git@develop
         - task_key: data_preprocessing
           depends_on:
             - task_key: data_ingestion
-          notebook_task:
-            notebook_path: pipelines/tasks/pdp_data_preprocessing/pdp_data_preprocessing
+          spark_python_task:
+            python_file: pipelines/tasks/pdp_data_preprocessing/pdp_data_preprocessing.py
             source: GIT
+            parameters:
+              - --databricks_institution_name
+              - "{{job.parameters.databricks_institution_name}}"
+              - --db_run_id
+              - "{{job.parameters.db_run_id}}"
+              - --DB_workspace
+              - "{{job.parameters.DB_workspace}}"
+              - --model_name
+              - "{{job.parameters.model_name}}"
+              - --cohort_dataset_validated_path
+              - "{{tasks.data_ingestion.values.cohort_dataset_validated_path}}"
+              - --course_dataset_validated_path
+              - "{{tasks.data_ingestion.values.course_dataset_validated_path}}"
+              - --toml_file_path
+              - "/Volumes/{{job.parameters.DB_workspace}}/{{job.parameters.databricks_institution_name}}_gold/gold_volume/configuration_files/{{job.parameters.databricks_institution_name}}_{{job.parameters.model_name}}_configuration_file.toml"
           job_cluster_key: pdp-inference-pipeline-cluster
           libraries:
-            - pypi:
-                package: faker
-            - pypi:
-                package: pandera
             - pypi:
                 package: git+https://github.com/datakind/student-success-tool.git@develop
         - task_key: data_validation
           depends_on:
             - task_key: data_preprocessing
           spark_python_task:
-            python_file: pipelines/tasks/data_validation/data_validation_task.py
-            parameters:
-              - --input_table_path
-              - "{{tasks.data_preprocessing.values.processed_dataset_path}}"
-              - --input_schema_path
-              - /Volumes/{{job.parameters.DB_workspace}}/{{job.parameters.databricks_institution_name}}_bronze/schema # TODO(samroon2): Update once finalized.
-              - --output_artifact_path
-              - "{{job.parameters.pipeline_root_dir}}"
-              - --environment
-              - SERVING
-              - "{{job.parameters.fail_on_anomalies}}"
+            python_file: pipelines/tasks/pdp_data_validation/pdp_data_validation.py
             source: GIT
           job_cluster_key: pdp-inference-pipeline-cluster
-          libraries:
-            - pypi:
-                package: tensorflow_data_validation==1.16.1
+        # - task_key: data_validation
+        #   depends_on:
+        #     - task_key: data_preprocessing
+        #   spark_python_task:
+        #     python_file: /Workspace/Users/pedro.melendez@datakind.org/python-refactor-pipeline/pipelines/tasks/data_validation/data_validation_task.py
+        #     source: GIT
+        #     parameters:
+        #       - --input_table_path
+        #       - "{{tasks.data_preprocessing.values.processed_dataset_path}}"
+        #       - --input_schema_path
+        #       - /Volumes/{{job.parameters.DB_workspace}}/{{job.parameters.databricks_institution_name}}_bronze/schema # TODO(samroon2): Update once finalized.
+        #       - --output_artifact_path
+        #       - "{{job.parameters.job_root_dir}}"
+        #       - --environment
+        #       - SERVING
+        #       - "{{job.parameters.fail_on_anomalies}}"
+        #   job_cluster_key: pdp-inference-pipeline-cluster
+        #   libraries:
+        #     - pypi:
+        #         package: tensorflow_data_validation==1.16.1
         - task_key: inference
           depends_on:
             - task_key: data_validation
-          notebook_task:
-            notebook_path: pipelines/tasks/pdp_model_inference/pdp_model_inference
+          spark_python_task:
+            python_file: pipelines/tasks/pdp_model_inference/pdp_model_inference.py
             source: GIT
+            parameters:
+              - --databricks_institution_name
+              - "{{job.parameters.databricks_institution_name}}"
+              - --db_run_id
+              - "{{job.parameters.db_run_id}}"
+              - --DB_workspace
+              - "{{job.parameters.DB_workspace}}"
+              - --model_name
+              - "{{job.parameters.model_name}}"
+              - --model_type
+              - "{{job.parameters.model_type}}"
+              - --job_root_dir  
+              - "/Volumes/{{job.parameters.DB_workspace}}/{{job.parameters.databricks_institution_name}}_gold/gold_volume/inference_jobs/{{job.parameters.db_run_id}}"
+              - --toml_file_path
+              - "/Volumes/{{job.parameters.DB_workspace}}/{{job.parameters.databricks_institution_name}}_gold/gold_volume/configuration_files/{{job.parameters.databricks_institution_name}}_{{job.parameters.model_name}}_configuration_file.toml"
+              - --processed_dataset_path
+              - "{{tasks.data_preprocessing.values.processed_dataset_path}}"
           job_cluster_key: pdp-inference-pipeline-cluster
           libraries:
             - pypi:
-                package: faker
-            - pypi:
-                package: pandera
+                package: git+https://github.com/datakind/student-success-tool.git@develop
+        - task_key: output_publish
+          depends_on:
+            - task_key: inference
+          spark_python_task: 
+            python_file: pipelines/tasks/pdp_inference_output_publish/pdp_inference_output_publish.py
+            source: GIT
+            parameters:
+              - --DB_workspace
+              - "{{job.parameters.DB_workspace}}"
+              - --databricks_institution_name
+              - "{{job.parameters.databricks_institution_name}}"
+              - --db_run_id
+              - "{{job.parameters.db_run_id}}"
+              - --gcp_bucket_name
+              - "{{job.parameters.gcp_bucket_name}}"
+              - --notification_email
+              - "{{job.parameters.notification_email}}"
+          job_cluster_key: pdp-inference-pipeline-cluster
+          libraries:
             - pypi:
                 package: git+https://github.com/datakind/student-success-tool.git@develop
-          email_notifications:
-            on_start:
-              - ${var.datakind_notification_email}
-            on_success:
-              - ${var.datakind_notification_email}
-            on_failure:
-              - ${var.datakind_notification_email}
       job_clusters:
         - job_cluster_key: pdp-inference-pipeline-cluster
           new_cluster:
@@ -84,7 +140,7 @@ resources:
               google_service_account: ${var.pipeline_sa_email}
               availability: ON_DEMAND_GCP
               zone_id: HA
-            node_type_id: n2-standard-4
+            node_type_id: n2-standard-8
             custom_tags:
               ResourceClass: SingleNode
               x-databricks-nextgen-cluster: "true"
@@ -95,7 +151,9 @@ resources:
       git_source:
         git_url: https://github.com/datakind/student-success-tool
         git_provider: gitHub
-        git_branch: pedro-develop
+        git_branch: pdp-inference-pipeline-refactor
+      tags:
+        dev: pedro_melendez
       queue:
         enabled: true
       parameters:
@@ -109,8 +167,6 @@ resources:
           default: "{{job.run_id}}"
         - name: DB_workspace
           default: dev_sst_02
-        - name: fail_on_anomalies
-          default: --fail_on_anomalies_false
         - name: gcp_bucket_name
           default: dev_6782b2f451f84c17ae6e14e918432b65
         - name: model_name
@@ -118,14 +174,13 @@ resources:
         - name: model_type
           default: sklearn
         - name: notification_email
-          default: ${var.end_user_notification_email}
-        - name: pipeline_root_dir
-          default: "{{job.run_id}}"
+          default: crystal.ren@datakind.org
         - name: version_id
           default: "1"
       permissions:
-        - group_name: ${var.group_to_manage_workflow} 
+        - group_name: ${var.fellows_group_to_manage_workflow} 
           level: CAN_MANAGE
-        - user_name: ${var.service_account_user}
+        - user_name: ${var.service_account_executer}
           level: CAN_MANAGE_RUN
-
+        - group_name: ${var.datakind_group_to_manage_workflow} 
+          level: CAN_MANAGE
