--- a/src/student_success_tool/assets/pdp/features_table.toml
+++ b/src/student_success_tool/assets/pdp/features_table.toml
@@ -8,20 +8,20 @@ num_credits_earned = { name = "number of credits earned this term" }
 course_id_nunique = { name = "number of unique courses taken this term" }
 course_subject_nunique = { name = "number of unique course subjects taken this term" }
 course_subject_area_nunique = { name = "number of unique course subject areas taken this term" }
-course_level_mean = { name = "avg. course level this term" }
-course_level_std = { name = "std. dev. in course levels this term" }
-course_grade_numeric_mean = { name = "avg. numeric course grade this term" }
-course_grade_numeric_std = { name = "std. dev. in numeric course grades this term" }
-section_num_students_enrolled_mean = { name = "avg. number of students enrolled per section this term" }
-section_num_students_enrolled_std = { name = "std. dev. in number of students enrolled per section this term" }
+course_level_mean = { name = "average course level this term" }
+course_level_std = { name = "standard deviation in course levels this term" }
+course_grade_numeric_mean = { name = "average numeric course grade this term" }
+course_grade_numeric_std = { name = "standard deviation in numeric course grades this term" }
+section_num_students_enrolled_mean = { name = "average number of students enrolled per section this term" }
+section_num_students_enrolled_std = { name = "standard deviation in number of students enrolled per section this term" }
 num_courses_core_course_y = { name = "number of core courses taken this term" }
 num_courses_enrolled_at_other_institution_s_y = { name = "number of courses taken this term while enrolled at another institution" }
 'num_courses_course_subject_area_(\d+)' = { name = "number of courses taken in subject area {} this term" }
-'num_courses_course_id_(.*)' = { name = "number of times course '{}' taken this term" }
+'num_courses_course_id_(.*)' = { name = "course '{}' taken this term" }
 num_courses_course_type_cu = { name = "number of college-level, undergraduate courses taken this term" }
 num_courses_course_type_cg = { name = "number of college-level, graduate courses taken this term" }
-num_courses_course_type_cc = { name = "number of college developmental, remedial, or preparatory courses taken this term" }
-num_courses_course_type_cd = { name = "number of college developmental, remedial, or preparatory courses taken this term" }
+num_courses_course_type_cc = { name = "number of college developmental, remedial, or preparatory courses taken this term applicable towards credential completion requirements" }
+num_courses_course_type_cd = { name = "number of college developmental, remedial, or preparatory courses taken this term not applicable towards credential completion requirements" }
 num_courses_course_type_el = { name = "number of ESL courses taken this term" }
 num_courses_course_type_ab = { name = "number of adult basic education courses taken this term" }
 num_courses_course_type_ge = { name = "number of adult secondary education / GED courses taken this term" }
@@ -60,7 +60,7 @@ num_courses_course_grade_c = { name = "number of C grades earned this term" }
 num_courses_course_grade_d = { name = "number of D grades earned this term" }
 num_courses_course_grade_f = { name = "number of F grades earned this term" }
 num_courses_grade_is_failing_or_withdrawal = { name = "number of courses failed or withdrawn this term" }
-num_courses_grade_above_section_avg = { name = "number of courses this term with grades above the sections' avg. grades" }
+num_courses_grade_above_section_avg = { name = "number of courses this term with grades above the sections' average grades" }
 cohort_term = { name = "student's cohort (enrollment) term" }
 enrollment_type = { name = "student's enrollment type " }
 enrollment_intensity_first_term = { name = "student's first-term enrollment intensity" }
@@ -111,8 +111,8 @@ frac_courses_enrolled_at_other_institution_s_y = { name = "fraction of courses t
 'frac_courses_course_id_(.*)' = { name = "fraction of times course '{}' taken this term" }
 frac_courses_course_type_cu = { name = "fraction of college-level, undergraduate courses taken this term" }
 frac_courses_course_type_cg = { name = "fraction of college-level, graduate courses taken this term" }
-frac_courses_course_type_cc = { name = "fraction of college developmental, remedial, or preparatory courses taken this term" }
-frac_courses_course_type_cd = { name = "fraction of college developmental, remedial, or preparatory courses taken this term" }
+frac_courses_course_type_cc = { name = "fraction of college developmental, remedial, or preparatory courses taken this term applicable towards credential completion requirements" }
+frac_courses_course_type_cd = { name = "fraction of college developmental, remedial, or preparatory courses taken this term not applicable towards credential completion requirements" }
 frac_courses_course_type_el = { name = "fraction of ESL courses taken this term" }
 frac_courses_course_type_ab = { name = "fraction of adult basic education courses taken this term" }
 frac_courses_course_type_ge = { name = "fraction of adult secondary education / GED courses taken this term" }
@@ -151,14 +151,14 @@ frac_courses_course_grade_c = { name = "fraction of C grades earned this term" }
 frac_courses_course_grade_d = { name = "fraction of D grades earned this term" }
 frac_courses_course_grade_f = { name = "fraction of F grades earned this term" }
 frac_courses_grade_is_failing_or_withdrawal = { name = "fraction of courses failed or withdrawn this term" }
-frac_courses_grade_above_section_avg = { name = "fraction of courses this term with grades above the sections' avg. grades" }
+frac_courses_grade_above_section_avg = { name = "fraction of courses this term with grades above the sections' average grades" }
 frac_courses_in_program_of_study_area_term_1 = { name = "fraction of courses taken this term in student's first-term program of study area" }
 frac_courses_in_program_of_study_area_year_1 = { name = "fraction of courses taken this term in student's first-year program of study area" }
 frac_courses_in_term_program_of_study_area = { name = "fraction of courses taken this term in student's current program of study area" }
 frac_sections_students_passed = { name = "fraction of section's students that passed the course" }
 frac_sections_students_completed = { name = "fraction of section's students that completed the course" }
-student_pass_rate_above_sections_avg = { name = "student's pass rate this term is above sections' avg. pass rate" }
-student_completion_rate_above_sections_avg = { name = "student's completion rate this term is above sections' avg. completion rate" }
+student_pass_rate_above_sections_avg = { name = "student's pass rate this term is above sections' average pass rate" }
+student_completion_rate_above_sections_avg = { name = "student's completion rate this term is above sections' average completion rate" }
 cumnum_unique_course_ids = { name = "number of unique courses taken so far" }
 cumnum_unique_course_subjects = { name = "number of unique course subjects taken so far" }
 cumnum_unique_course_subject_areas = { name = "number of unique course subject areas taken so far" }
@@ -171,23 +171,23 @@ cumnum_noncore_terms_enrolled = { name = "number of 'non-core' terms enrolled so
 term_in_peak_covid_cumsum = { name = "number of terms so far that occurred in 'peak' COVID" }
 term_is_while_student_enrolled_at_other_inst_cumsum = { name = "number of terms so far that occurred while student was enrolled at another institution" }
 term_is_pre_cohort_cumsum = { name = "number of terms so far that occurred before student's cohort (enrollment) term" }
-course_level_mean_cummean = { name = "avg. course level so far" }
-course_level_mean_cummin = { name = "min. course level so far" }
-course_level_mean_cumstd = { name = "std. dev. in course levels so far" }
-course_grade_numeric_mean_cummean = { name = "avg. numeric course grade so far" }
-course_grade_numeric_mean_cummin = { name = "min. numeric course grade so far" }
-course_grade_numeric_mean_cumstd = { name = "std. dev. in numeric course grades so far" }
+course_level_mean_cummean = { name = "average course level so far" }
+course_level_mean_cummin = { name = "minimum course level so far" }
+course_level_mean_cumstd = { name = "standard deviation in course levels so far" }
+course_grade_numeric_mean_cummean = { name = "average numeric course grade so far" }
+course_grade_numeric_mean_cummin = { name = "minimum numeric course grade so far" }
+course_grade_numeric_mean_cumstd = { name = "standard deviation in numeric course grades so far" }
 num_courses_cumsum = { name = "total number of courses taken so far" }
-num_courses_cummean = { name = "avg. number of courses taken per term so far" }
+num_courses_cummean = { name = "average number of courses taken per term so far" }
 num_courses_cummin = { name = "min. number of courses taken per term so far" }
 num_credits_attempted_cumsum = { name = "total number of credits attempted so far" }
-num_credits_attempted_cummean = { name = "avg. number of credits attempted per term so far" }
-num_credits_attempted_cummin = { name = "min. number of credits attempted per term so far" }
+num_credits_attempted_cummean = { name = "average number of credits attempted per term so far" }
+num_credits_attempted_cummin = { name = "minimum number of credits attempted per term so far" }
 num_credits_earned_cumsum = { name = "total number of credits earned so far" }
-num_credits_earned_cummean = { name = "avg. number of credits earned per term so far" }
-num_credits_earned_cummin = { name = "min. number of credits earned per term so far" }
-student_pass_rate_above_sections_avg_cumsum = { name = "number of terms so far where student's pass rate is above sections' avg. pass rate" }
-student_completion_rate_above_sections_avg_cumsum = { name = "number of terms so far where student's completion rate is above sections' avg. completion rate" }
+num_credits_earned_cummean = { name = "average number of credits earned per term so far" }
+num_credits_earned_cummin = { name = "minimum number of credits earned per term so far" }
+student_pass_rate_above_sections_avg_cumsum = { name = "number of terms so far where student's pass rate is above sections' average pass rate" }
+student_completion_rate_above_sections_avg_cumsum = { name = "number of terms so far where student's completion rate is above sections' average completion rate" }
 num_courses_passed_cumfrac = { name = "fraction of courses passed so far" }
 num_courses_completed_cumfrac = { name = "fraction of courses completed so far" }
 num_courses_core_course_y_cumfrac = { name = "fraction of core courses taken so far" }
@@ -196,8 +196,8 @@ num_courses_enrolled_at_other_institution_s_y_cumfrac = { name = "fraction of co
 'num_courses_course_id_(.*)_cumfrac' = { name = "fraction of times course '{}' taken so far" }
 num_courses_course_type_cu_cumfrac = { name = "fraction of college-level, undergraduate courses taken so far" }
 num_courses_course_type_cg_cumfrac = { name = "fraction of college-level, graduate courses taken so far" }
-num_courses_course_type_cc_cumfrac = { name = "fraction of college developmental, remedial, or preparatory courses taken so far" }
-num_courses_course_type_cd_cumfrac = { name = "fraction of college developmental, remedial, or preparatory courses taken so far" }
+num_courses_course_type_cc_cumfrac = { name = "fraction of college developmental, remedial, or preparatory courses taken so far applicable towards credential completion requirements" }
+num_courses_course_type_cd_cumfrac = { name = "fraction of college developmental, remedial, or preparatory courses taken so far not applicable towards credential completion requirements" }
 num_courses_course_type_el_cumfrac = { name = "fraction of ESL courses taken so far" }
 num_courses_course_type_ab_cumfrac = { name = "fraction of adult basic education courses taken so far" }
 num_courses_course_type_ge_cumfrac = { name = "fraction of adult secondary education / GED courses taken so far" }
@@ -236,7 +236,7 @@ num_courses_course_grade_c_cumfrac = { name = "fraction of C grades earned so fa
 num_courses_course_grade_d_cumfrac = { name = "fraction of D grades earned so far" }
 num_courses_course_grade_f_cumfrac = { name = "fraction of F grades earned so far" }
 num_courses_grade_is_failing_or_withdrawal_cumfrac = { name = "fraction of courses failed or withdrawn so far" }
-num_courses_grade_above_section_avg_cumfrac = { name = "fraction of courses so far with grades above the sections' avg. grades" }
+num_courses_grade_above_section_avg_cumfrac = { name = "fraction of courses so far with grades above the sections' average grades" }
 num_courses_in_program_of_study_area_term_1_cumfrac = { name = "number of courses taken so far in student's first-term program of study area" }
 num_courses_in_program_of_study_area_year_1_cumfrac = { name = "number of courses taken so far in student's first-year program of study area" }
 cumfrac_terms_enrolled = { name = "fraction of all terms enrolled so far" }
@@ -244,17 +244,17 @@ cumfrac_core_terms_enrolled = { name = "fraction of 'core' terms enrolled so far
 cumfrac_noncore_terms_enrolled = { name = "fraction of 'non-core' terms enrolled so far" }
 num_courses_diff_prev_term = { name = "change in number of courses taken this term compared to previous term" }
 num_credits_earned_diff_prev_term = { name = "change in number of credits earned this term compared to previous term" }
-course_grade_numeric_mean_diff_prev_term = { name = "change in avg. numeric grade this term compared to previous term" }
-course_level_mean_diff_prev_term = { name = "change in avg. course level this term compared to previous term" }
+course_grade_numeric_mean_diff_prev_term = { name = "change in average numeric grade this term compared to previous term" }
+course_level_mean_diff_prev_term = { name = "change in average course level this term compared to previous term" }
 num_courses_diff_term_1_to_term_2 = { name = "change in number of courses taken in term 2 compared to term 1" }
 num_courses_diff_term_2_to_term_3 = { name = "change in number of courses taken in term 3 compared to term 2" }
 num_courses_diff_term_3_to_term_4 = { name = "change in number of courses taken in term 4 compared to term 3" }
 num_credits_earned_diff_term_1_to_term_2 = { name = "chang ein number of credits earned in term 2 compared to term 1" }
 num_credits_earned_diff_term_2_to_term_3 = { name = "chang ein number of credits earned in term 3 compared to term 2" }
 num_credits_earned_diff_term_3_to_term_4 = { name = "chang ein number of credits earned in term 4 compared to term 3" }
-course_grade_numeric_mean_diff_term_1_to_term_2 = { name = "change in avg. numeric grade in term 2 compared to term 1" }
-course_grade_numeric_mean_diff_term_2_to_term_3 = { name = "change in avg. numeric grade in term 3 compared to term 2" }
-course_grade_numeric_mean_diff_term_3_to_term_4 = { name = "change in avg. numeric grade in term 4 compared to term 3" }
-course_level_mean_diff_term_1_to_term_2 = { name = "change in avg. course level in term 2 compared to term 1" }
-course_level_mean_diff_term_2_to_term_3 = { name = "change in avg. course level in term 3 compared to term 2" }
-course_level_mean_diff_term_3_to_term_4 = { name = "change in avg. course level in term 4 compared to term 3" }
+course_grade_numeric_mean_diff_term_1_to_term_2 = { name = "change in average numeric grade in term 2 compared to term 1" }
+course_grade_numeric_mean_diff_term_2_to_term_3 = { name = "change in average numeric grade in term 3 compared to term 2" }
+course_grade_numeric_mean_diff_term_3_to_term_4 = { name = "change in average numeric grade in term 4 compared to term 3" }
+course_level_mean_diff_term_1_to_term_2 = { name = "change in average course level in term 2 compared to term 1" }
+course_level_mean_diff_term_2_to_term_3 = { name = "change in average course level in term 3 compared to term 2" }
+course_level_mean_diff_term_3_to_term_4 = { name = "change in average course level in term 4 compared to term 3" }
